genrule(
    name = "is-displayed",
    srcs = [
        "//javascript/atoms:is-displayed.js",
    ],
    outs = ["selenium/webdriver/remote/isDisplayed.js"],
    cmd = "cp \"$(location //javascript/atoms:is-displayed.js)\" \"$@\"",
)

genrule(
    name = "get-attribute",
    srcs = [
        "//javascript/webdriver/atoms:get-attribute.js",
    ],
    outs = ["selenium/webdriver/remote/getAttribute.js"],
    cmd = "cp \"$(location //javascript/webdriver/atoms:get-attribute.js)\" \"$@\"",
)

py_library(
    name = "main",
    srcs = glob(["selenium/**/*.py"]),
    data = [
        ":get-attribute",
        ":is-displayed",
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
)

py_test(
    name = "unit",
    size = "small",
    srcs = glob([
        "test/unit/**/*.py",
    ]) + [ "test/run_pytest.py" ],
    main = "test/run_pytest.py",
    deps = [
        ":main",
    ],
)
